# 27

./: README.MD  catalog_fixture.json  pyproject.toml
my_first_django_project/: manage.py
my_first_django_project/catalog/: admin.py  models.py  urls.py
my_first_django_project/catalog/management/commands/: add_products.py
my_first_django_project/catalog/migrations/: 0001_initial.py
my_first_django_project/catalog/templates/: home.html
my_first_django_project/my_first_django_project/: asgi.py  settings.py  urls.py  wsgi.py
