[tool.poetry]
name = "homework-django-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
pillow = "^11.1.0"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"